...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O7I-vp-yba" userLabel="Like Button">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="Fcc-GQ-F0h"/>
                                                        <constraint firstAttribute="height" constant="44" id="evH-rr-udw"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
...
                            <constraint firstItem="bFD-8J-cDm" firstAttribute="bottom" secondItem="Vf9-4U-8EE" secondAttribute="bottom" id="LPf-gL-5Rv"/>
                            <constraint firstItem="v3T-rL-SuG" firstAttribute="top" secondItem="H1V-Bi-Wke" secondAttribute="top" constant="8" id="i1W-y4-tsW"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="GDy-23-MYC"/>
                    <connections>
                        <outlet property="backButton" destination="v3T-rL-SuG" id="ldV-8P-9ji"/>
                        <outlet property="imageView" destination="v5E-Cw-bmG" id="hTr-u2-Yny"/>
                        <outlet property="scrollView" destination="bFD-8J-cDm" id="A0x-h0-9X8"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="3cD-FC-T2q" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
