...
        presenter?.viewDidLoad()
        webView.navigationDelegate = self
    }
    
    // MARK: - private functions
    private func setAccessibilityIdentifiers() {
        webView.accessibilityIdentifier = "unsplashWebView"
    }
        
    // MARK: - Actions
    @IBAction func didTapBackButton(_ sender: Any) {
        delegate?.webViewViewControllerDidCancel(self)
    }
...
