...
        webViewViewController.delegate = self
        webViewViewController.configure(webViewPresenter)
    }
        
    // MARK: - private functions
    private func setAccessibilityIdentifiers() {
        buttonAuthenticate.accessibilityIdentifier = "authenticateButton"
    }
    
    private func showAuthErrorAlert() {
        let button = AlertButton(buttonText: "OK", style: .default) {}
        
        let alertModel = AlertModel(id: "AuthErrorAlert",
...
